# zapros

./: .gitignore  .release-please-config.json  CHANGELOG.md  CONTRIBUTING.md  README.md  package.json  pnpm-lock.yaml  pyproject.toml  release-please-config.json  ry.yml  wrangler.toml
.claude/skills/zapros-docs/: SKILL.md
.github/workflows/: ci.yml  publish.yml  release-please.yml
docs/: asgi.md  authentication.md  browser.md  caching.md  cassettes.md  configuration.md  cookies.md  get-requests.md  handlers.md  httpx-alternative.md  index.md  matchers.md  middleware-interceptors.md  mocking.md  models.md  network-errors.md  overview.md  proxies.md  python-std.md  query-parameters.md  quickstart.md  redirects.md  request-body.md  retries.md  retry-strategies.md  rust.md  timeouts.md  urls.md  websockets.md  why-zapros.md
docs/.vitepress/: config.mts
docs/.vitepress/theme/: custom.css
docs/guide/: async-sync.md
docs/superpowers/specs/: 2026-06-22-decoder-chunk-size-design.md
examples/: benchmarks.py  oauth.py
pyodide_tests/: conftest.py  test_pyodide.py
scripts/: fix  lint  test  unasync
src/zapros/: __init__.py  _async_client.py  _async_io.py  _async_pool.py  _base_io.py  _base_pool.py  _compat.py  _constants.py  _decoders.py  _errors.py  _headers.py  _models.py  _multidict.py  _multipart.py  _sync_client.py  _sync_io.py  _sync_pool.py  _typing.py  _utils.py  matchers.py  mock.py
src/zapros/_handlers/: _asgi.py  _async_base.py  _async_pyodide.py  _async_pyreqwest.py  _async_std.py  _caching.py  _cassette.py  _common.py  _cookies.py  _exc_map.py  _mock.py  _proxy.py  _redirect.py  _retries.py  _sync_base.py  _sync_pyreqwest.py  _sync_std.py
src/zapros/_handlers/_std/: _async.py  _async_http1.py  _async_http2.py  _common.py  _conn.py  _sync.py  _sync_http1.py  _sync_http2.py
src/zapros/_io/: _asyncio.py  _base.py  _sync.py  _trio.py
src/zapros/websocket/: __init__.py  _asgi.py  _async.py  _errors.py  _sync.py  _types.py
tests/: conftest.py  mock_server.py  test_async_auth.py  test_async_client.py  test_async_pool.py  test_auth.py  test_base_url.py  test_caching.py  test_decoders.py  test_headers.py  test_mock.py  test_mock_context.py  test_models.py  test_multipart.py  test_pool_stress.py  test_redirect.py  test_response_decoding.py  test_response_status_props.py  test_retries.py  test_sync_auth.py  test_sync_client.py  test_sync_pool.py
tests/handlers/: _h2_test_server.py  test_asgi.py  test_async_basic.py  test_async_caching.py  test_async_cassette.py  test_async_http2.py  test_async_proxy.py  test_cassette.py  test_cookies_async.py  test_sync_basic.py  test_sync_caching.py  test_sync_cassette.py  test_sync_proxy.py
tests/mock/: _base.py  _mock_async.py  _mock_sync.py
tests/websocket/: conftest.py  test_async.py  test_sync.py  ws_server.py
