[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zapros"
version = "0.11.0"
description = "Modern and extensible HTTP client for Python."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["http", "client", "async", "requests", "httpx"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "h11>=0.16.0",
    "pywhatwgurl>=0.1.0",
    "typing-extensions>=4.15.0",
]

[project.urls]
Homepage = "https://zapros.dev"
Documentation = "https://zapros.dev"
Repository = "https://github.com/kap-sh/zapros"
Issues = "https://github.com/kap-sh/zapros/issues"

[project.optional-dependencies]
brotli = [
    "brotli>=1.0.0",
]
zstd = [
    "zstandard>=0.18.0",
]
pyreqwest = [
    "pyreqwest; python_version >= '3.11'",
]
caching = [
    "hishel>=1.1.9",
]
socks = [
    "socksio>=1.0.0",
]

[dependency-groups]
dev = [
    "h11>=0.16.0",
    "inline-snapshot>=0.28.0",
    "litestar[standard]>=2.0.0",
    "pytest>=9.0.2",
    "pytest-pyodide",
    "ruff>=0.14.0",
    "pyright>=1.1.404",
    "pywhatwgurl>=0.1.0",
    "hishel[async]>=1.1.9",
    "ry-cli==0.4.0",
    "trio>=0.33.0",
    "sniffio>=1.3.1",
    "anyio>=4.12.1",
    "uvicorn>=0.38.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
anyio_mode = "auto"

[tool.ruff]
line-length = 120
exclude = [
    "src/zapros/_handlers/_sync_base.py",
    "src/zapros/_handlers/_sync_pyreqwest.py",
    "src/zapros/_sync_pool.py",
    "src/zapros/_sync_io.py",
    "src/zapros/_handlers/_sync_std.py",
    "src/zapros/_sync_client.py",
    "tests/handlers/test_sync_basic.py",
    "src/zapros/_handlers/_sync_std.py",
    "tests/test_sync_pool.py",
    "tests/handlers/test_sync_proxy.py",
    "tests/test_sync_auth.py",
    "tests/handlers/test_sync_cassette.py",
    "tests/handlers/test_sync_caching.py",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.pyright]
strict = ["src"]
exclude = [
    "venv",
    ".venv",
    "src/zapros/_handlers/_async_pyreqwest.py",
    "src/zapros/_handlers/_sync_std.py",
    "src/zapros/_handlers/_sync_pyreqwest.py",
    "tests/handlers/test_async_basic.py",
    "tests/handlers/test_sync_basic.py",
]
typeCheckingMode = "standard"
